src/Base/main/default/objects/Experience_Mitigation_Report__c/Experience_Mitigation_Report__c.object-meta.xml
<CustomObject>
    <label>Experience Mitigation Report</label>
    <nameField>
        <displayFormat>EMR-{0000}</displayFormat>
        <label>Experience Mitigation Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Mitigation Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>