src/Base/main/default/objects/Experience_Mitigation_Report__c/fields/Cost_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Resolution__c</fullName>
    <label>Cost of Resolution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>