src/Base/main/default/objects/Experience_Mitigation_Report__c/fields/Impacted_Account__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impacted Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Experience Mitigation Reports</relationshipLabel>
    <relationshipName>Experience_Mitigation_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>