src/Base/main/default/objects/Experience_Mitigation_Report__c/fields/Initial_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Initial_Presentation__c</fullName>
    <label>Initial Presentation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>