src/Base/main/default/objects/Experience_Mitigation_Report__c/fields/Mitigation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Cost__c</fullName>
    <label>Mitigation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>