src/Base/main/default/objects/Experience_Mitigation_Report__c/fields/Suggestions_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_to_Resolve__c</fullName>
    <label>Suggestions to Resolve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>