src/Base/main/default/objects/Experience_Mitigation_Report__c/fields/Summary_of_Issue_s__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Issue_s__c</fullName>
    <label>Summary of Issue(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>