src/Base/main/default/objects/Experience_Mitigation_Report__c/listViews/All_open_EMR_s_by_Status.listView-meta.xml
<ListView>
    <fullName>All_open_EMR_s_by_Status</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Mitigation_Cost__c</columns>
    <columns>Cost_of_Resolution__c</columns>
    <columns>Initial_Presentation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All open EMR&apos;s by Status</label>
    <sharedTo>
        <group>National_Customer_Support</group>
        <role>Customer_Experience_Specialist</role>
        <role>Director_of_Support</role>
        <role>Support</role>
    </sharedTo>
</ListView>